--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,11 @@
 {
   "presets": [
-    "es2015",
+    [
+      "env",
+      {
+        "modules": false
+      }
+    ],
     "react"
   ],
   "plugins": [
