--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
   },
   "scripts": {
     "prebuild": "del-cli dist -f",
-    "build": "cross-env NODE_ENV=production && webpack",
+    "build": "webpack",
     "start": "webpack-dev-server",
     "test": "jest",
     "test:watch": "npm test -- --watch"
