--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "webpack",
+  "name": "toyRobot",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
@@ -26,8 +26,8 @@
     "react-test-renderer": "^15.5.4",
     "redux-mock-store": "^1.2.3",
     "style-loader": "^0.16.1",
-    "webpack": "^2.2.1",
-    "webpack-dev-server": "^2.4.2"
+    "webpack": "^3.2.0",
+    "webpack-dev-server": "^2.5.1"
   },
   "dependencies": {
     "antd": "^2.9.1",
@@ -44,8 +44,8 @@
   },
   "scripts": {
     "prebuild": "del-cli dist -f",
-    "build": "webpack",
-    "start": "webpack-dev-server",
+    "build": "webpack --env production --watch",
+    "start": "webpack-dev-server --env development",
     "test": "jest",
     "test:watch": "npm test -- --watch"
   },
