--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "license": "MIT",
   "devDependencies": {
     "babel-core": "^6.24.0",
-    "babel-jest": "^19.0.0",
     "babel-loader": "^6.4.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
@@ -13,12 +12,14 @@
     "babel-polyfill": "^6.23.0",
     "babel-preset-env": "^1.6.0",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "cross-env": "^5.0.1",
     "css-loader": "^0.28.0",
     "del-cli": "^0.2.1",
     "enzyme": "^2.8.2",
     "html-webpack-plugin": "^2.28.0",
-    "jest": "^19.0.2",
+    "jest": "^20.0.4",
+    "jest-cli": "^20.0.4",
     "jsx-control-statements": "^3.1.5",
     "open-browser-webpack-plugin": "^0.0.5",
     "path": "^0.12.7",
